update app, header, search, result-list and result-item components

--- a/src/app/mm-result-list/mm-result-list.component.html
+++ b/src/app/mm-result-list/mm-result-list.component.html
@@ -1,1 +1,22 @@
-<p>mm-result-list works!</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+    <div class="col-md-4">
+      <app-mm-result-item></app-mm-result-item>
+    </div>
+  </div>
+</div>
