--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h2>Working...</h2>
+      <app-mm-search></app-mm-search>
+      <app-mm-result-list></app-mm-result-list>
     </div>
   </div>
 </div>
