--- a/src/app/mm-header/mm-header.component.html
+++ b/src/app/mm-header/mm-header.component.html
@@ -1,1 +1,18 @@
-<h1>Header nav incoming...</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" (click)="toggleNavbar()">
+        <span class="icon-bar" *ngFor="let icon of [1, 2, 3]"></span>
+      </button>
+      <a class="navbar-brand" href="#">Met Museum UI</a>
+    </div>
+    <div class="collapse navbar-collapse" [ngStyle]="{'display': isNavbarOpen ? 'block': 'none'}">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a>Home</a></li>
+        <li><a>About</a></li>
+        <li><a>Services</a></li>
+        <li><a>Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
