--- a/src/app/mm-result-list/mm-result-item/mm-result-item.component.html
+++ b/src/app/mm-result-list/mm-result-item/mm-result-item.component.html
@@ -1,5 +1,14 @@
 <div class="row">
   <div class="col-md-12">
-    <p>result-item-works!</p>
+    <!-- <div class="thumbnail">
+      <img src="https://images.metmuseum.org/CRDImages/ad/web-large/204788.jpg" alt="art-item" class="img-responsive">
+      <div class="caption">
+        <h4>Art Title</h4>
+        <p>Art description - Lorem ipsum dolor sit</p>
+        <p>
+          <a href="#" class="btn btn-primary">View</a>
+        </p>
+      </div>
+    </div> -->
   </div>
 </div>
