--- a/src/app/mm-result-list/mm-result-list.component.html
+++ b/src/app/mm-result-list/mm-result-list.component.html
@@ -1,21 +1,18 @@
 <div class="row">
-  <div class="col-md-12">
-    <div class="col-md-4">
-      <app-mm-result-item></app-mm-result-item>
-    </div>
-    <div class="col-md-4">
-      <app-mm-result-item></app-mm-result-item>
-    </div>
-    <div class="col-md-4">
-      <app-mm-result-item></app-mm-result-item>
-    </div>
-    <div class="col-md-4">
-      <app-mm-result-item></app-mm-result-item>
-    </div>
-    <div class="col-md-4">
-      <app-mm-result-item></app-mm-result-item>
-    </div>
-    <div class="col-md-4">
+  <div class="col-xs-12">
+    <div class="col-xs-6 col-md-4" *ngFor="let item of artItems">
+      <div class="thumbnail">
+        <a href="#">
+          <img [src]="item.primaryImageSmall" [alt]="item.objectName" class="img-responsive" style="max-height: 300px;">
+        </a>
+        <div class="caption">
+          <h4>{{item.title}}</h4>
+          <p>Art description - Lorem ipsum dolor sit</p>
+          <p>
+            <a href="#" class="btn btn-primary">View</a>
+          </p>
+        </div>
+      </div>
       <app-mm-result-item></app-mm-result-item>
     </div>
   </div>
