add results component, move result-list inside and result-item inside result-list add result-detail component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-12">
       <app-mm-search></app-mm-search>
-      <app-mm-result-list></app-mm-result-list>
+      <app-mm-results></app-mm-results>
     </div>
   </div>
 </div>
