--- a/src/app/mm-search/mm-search.component.html
+++ b/src/app/mm-search/mm-search.component.html
@@ -1,1 +1,34 @@
-<p>mm-search works!</p>
+<div class="row">
+  <div class="col-xs-6 col-xs-offset-3">
+    <div class="row">
+      <div class="col-xs-4">
+        <div class="form-group">
+          <input type="number" class="form-control" placeholder="Search By id">
+        </div>
+      </div>
+      <div class="col-xs-8">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search By title">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-group">
+          <label for="filter">Filter By Department</label>
+          <select name="departmentIds" id="filter" class="form-control">
+            <option value="1">American Decorative Arts</option>
+            <option value="3">Ancient Near Eastern Art</option>
+            <option value="4">Arms and Armor</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div class="row pull-right">
+      <div class="col-xs-12">
+        <button class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+<hr>
