--- a/src/app/mm-search/mm-search.component.html
+++ b/src/app/mm-search/mm-search.component.html
@@ -3,12 +3,12 @@
     <div class="row">
       <div class="col-xs-4">
         <div class="form-group">
-          <input type="number" class="form-control" placeholder="Search By id">
+          <input type="number" class="form-control" placeholder="Search By id" #idQuery>
         </div>
       </div>
       <div class="col-xs-8">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search By title">
+          <input type="text" class="form-control" placeholder="Search By title" #titleQuery>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
       <div class="col-xs-12">
         <div class="form-group">
           <label for="filter">Filter By Department</label>
-          <select name="departmentIds" id="filter" class="form-control">
+          <select name="departmentIds" id="filter" class="form-control" #departmentFilter>
             <option value="1">American Decorative Arts</option>
             <option value="3">Ancient Near Eastern Art</option>
             <option value="4">Arms and Armor</option>
@@ -26,7 +26,7 @@
     </div>
     <div class="row pull-right">
       <div class="col-xs-12">
-        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-primary" (click)="onSubmit()">Submit</button>
       </div>
     </div>
   </div>
