--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-mm-search></app-mm-search>
-      <app-mm-results></app-mm-results>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
