--- a/src/app/mm-results/mm-result-detail/mm-result-detail.component.html
+++ b/src/app/mm-results/mm-result-detail/mm-result-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-primary">Go Back</button>
+    <a [routerLink]="'/'" class="btn btn-primary">Go Back</a>
   </div>
 </div>
 <div class="row">
