--- a/src/app/arts/art-list/art-item/art-item.component.html
+++ b/src/app/arts/art-list/art-item/art-item.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
     <div class="thumbnail">
-      <a href="#">
+      <a [routerLink]="['/art-detail', artItem.objectID]">
         <img [src]="artItem.primaryImageSmall" [alt]="artItem.objectName" class="img-responsive"
           style="max-height: 300px;">
       </a>
