--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,14 +8,11 @@
     </div>
     <div class="collapse navbar-collapse" [ngStyle]="{'display': isNavbarOpen ? 'block': 'none'}">
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a [routerLink]="'/'">Home</a>
+        <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">
+          <a [routerLink]="'/art-results'">Home</a>
         </li>
-        <li>
+        <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a [routerLink]="'/about'">About</a>
-        </li>
-        <li>
-          <a [routerLink]="'/contact'">Contact</a>
         </li>
       </ul>
     </div>
