--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" [ngStyle]="{'display': isNavbarOpen ? 'block': 'none'}">
       <ul class="nav navbar-nav navbar-right">
         <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}">
-          <a [routerLink]="'/art-results'">Home</a>
+          <a [routerLink]="'/'">Home</a>
         </li>
         <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a [routerLink]="'/about'">About</a>
