add pagination to gallery update art service to utilize caching

--- a/src/app/gallery/art-detail/art-detail.component.html
+++ b/src/app/gallery/art-detail/art-detail.component.html
@@ -15,7 +15,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <a *ngIf="artItem.objectURL !== ''" [href]="artItem.objectURL">View on Met Museum
+    <a *ngIf="artItem.objectURL !== ''" [href]="artItem.objectURL" target="_blank">View on Met Museum
       Website</a>
   </div>
 </div>
