--- a/src/app/gallery/search/search.component.html
+++ b/src/app/gallery/search/search.component.html
@@ -1,20 +1,27 @@
 <div class="row">
   <div class="col-xs-6 col-xs-offset-3">
-    <form (ngSubmit)="onSubmit(searchForm)" #searchForm="ngForm">
+    <form (ngSubmit)="onSubmitById(searchById)" #searchById="ngForm">
       <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-6 col-xs-offset-3">
           <div class="form-group">
             <input type="number" class="form-control" placeholder="Search By id" ngModel name="objectID">
           </div>
-        </div>
-        <div class="col-xs-8">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search By title" ngModel name="artTitle">
+          <div class="form-group text-center">
+            <button class="btn btn-primary">Submit</button>
           </div>
         </div>
       </div>
+    </form>
+    <h4 style="text-align: center;">OR</h4>
+    <form (ngSubmit)="onSubmitByOther(searchByOther)" #searchByOther="ngForm">
       <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-6">
+          <div class="form-group">
+            <label for="title">Search by title</label>
+            <input type="text" id="title" class="form-control" placeholder="Search By title" ngModel name="artTitle">
+          </div>
+        </div>
+        <div class="col-xs-6">
           <div class="form-group">
             <label for="filter">Filter By Department</label>
             <select id="filter" class="form-control" ngModel name="departmentID">
