--- a/src/app/gallery/art-detail/art-detail.component.html
+++ b/src/app/gallery/art-detail/art-detail.component.html
@@ -23,6 +23,18 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h4>Description</h4>
+    <h4>More about this art</h4>
+    <p *ngIf="artItem.objectDate">Date: {{artItem.objectDate}}</p>
+    <p *ngIf="artItem.department">Department: {{artItem.department}}</p>
+    <p *ngIf="artItem.dimensions">Dimensions: {{artItem.dimensions}}</p>
+    <p *ngIf="artItem.creditLine">Credit Line: {{artItem.creditLine}}</p>
+  </div>
+</div>
+<div class="row" *ngIf="artItem.city || artItem.state || artItem.country">
+  <div class="col-xs-12">
+    <h5>Location</h5>
+    <p *ngIf="artItem.city">City: {{artItem.city}}</p>
+    <p *ngIf="artItem.state">State: {{artItem.state}}</p>
+    <p *ngIf="artItem.country">Country: {{artItem.country}}</p>
   </div>
 </div>
