--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -14,3 +14,10 @@
     </div>
   </div>
 </div>
+<div class="row" style="margin-bottom: 3rem;">
+  <div class="col-xs-12 text-center">
+    <button class="btn btn-default" (click)="decrementPageNumber()" [disabled]="currentPage === 1">Previous</button>
+    |
+    <button class="btn btn-primary" (click)="incrementPageNumber()">Next</button>
+  </div>
+</div>
