--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,12 +1,6 @@
 <app-search></app-search>
-<div class="row">
-  <div class="col-xs-12 text-center">
-    <button class="btn btn-default" (click)="decrementPageNumber()" [disabled]="currentPage === 1">Previous</button>
-    |
-    <button class="btn btn-primary" (click)="incrementPageNumber()">Next</button>
-  </div>
-</div>
-<hr>
+<app-pagination-controls (moveToNextPage)="incrementPageNumber()"
+  (moveToPreviousPage)="decrementPageNumber()"></app-pagination-controls>
 <div class="row">
   <div class="col-xs-12">
     <div class="col-xs-6 col-md-4" *ngFor="let artItem of paginatedArtItems$ | async">
@@ -14,10 +8,5 @@
     </div>
   </div>
 </div>
-<div class="row" style="margin-bottom: 3rem;">
-  <div class="col-xs-12 text-center">
-    <button class="btn btn-default" (click)="decrementPageNumber()" [disabled]="currentPage === 1">Previous</button>
-    |
-    <button class="btn btn-primary" (click)="incrementPageNumber()">Next</button>
-  </div>
-</div>
+<app-pagination-controls (moveToNextPage)="incrementPageNumber()"
+  (moveToPreviousPage)="decrementPageNumber()"></app-pagination-controls>
