--- a/src/app/gallery/pagination-controls/pagination-controls.component.html
+++ b/src/app/gallery/pagination-controls/pagination-controls.component.html
@@ -1,5 +1,6 @@
 <div class="row" style="margin-bottom: 3rem;">
   <div class="col-xs-12 text-center">
+    <p>{{totalResults}} Results Found.</p>
     <button class="btn btn-default" (click)="moveToPreviousPage.emit()" [disabled]="currentPage === 1">Previous</button>
     |
     <button class="btn btn-primary" (click)="moveToNextPage.emit()">Next</button>
