--- a/src/app/art-detail/art-detail.component.html
+++ b/src/app/art-detail/art-detail.component.html
@@ -5,7 +5,7 @@
 </div>
 <hr>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12" style="text-align: -webkit-center;">
     <img [src]="artItem.primaryImage || '/no-image-found.png'" style="max-height: 500px;" [alt]="artItem.title"
       class="img-responsive">
   </div>
