--- a/src/app/gallery/search/search.component.html
+++ b/src/app/gallery/search/search.component.html
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-xs-6 col-xs-offset-3">
           <div class="form-group">
-            <input type="number" class="form-control" placeholder="Search By id" ngModel name="objectID">
+            <input type="number" class="form-control" placeholder="Search By id" [(ngModel)]="idQuery" name="objectID">
           </div>
           <div class="form-group text-center">
             <button class="btn btn-primary">Submit</button>
@@ -18,13 +18,14 @@
         <div class="col-xs-6">
           <div class="form-group">
             <label for="title">Search by title</label>
-            <input type="text" id="title" class="form-control" placeholder="Search By title" ngModel name="title">
+            <input type="text" id="title" class="form-control" placeholder="Search By title" [(ngModel)]="titleQuery"
+              name="title">
           </div>
         </div>
         <div class="col-xs-6">
           <div class="form-group">
             <label for="filter">Filter By Department</label>
-            <select id="filter" class="form-control" ngModel name="departmentId">
+            <select id="filter" class="form-control" [(ngModel)]="departmentIdQuery" name="departmentId">
               <option *ngFor="let dept of departments" [value]="dept.departmentId">{{dept.displayName}}</option>
             </select>
           </div>
