--- a/src/app/art-detail/art-detail.component.html
+++ b/src/app/art-detail/art-detail.component.html
@@ -4,37 +4,42 @@
   </div>
 </div>
 <hr>
-<div class="row">
-  <div class="col-xs-12" style="text-align: -webkit-center;">
-    <img [src]="artItem.primaryImage || '/no-image-found.png'" style="max-height: 500px;" [alt]="artItem.title"
-      class="img-responsive">
+<div class="row" *ngIf="artItem; else noData">
+  <div class="row">
+    <div class="col-xs-12" style="text-align: -webkit-center;">
+      <img [src]="artItem.primaryImage || '/no-image-found.png'" style="max-height: 500px;" [alt]="artItem.title"
+        class="img-responsive">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>{{artItem.title}}</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <a *ngIf="artItem.objectURL !== ''" [href]="artItem.objectURL" target="_blank">View on Met Museum
+        Website</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <h4>More about this art</h4>
+      <p *ngIf="artItem.objectDate">Date: {{artItem.objectDate}}</p>
+      <p *ngIf="artItem.department">Department: {{artItem.department}}</p>
+      <p *ngIf="artItem.dimensions">Dimensions: {{artItem.dimensions}}</p>
+      <p *ngIf="artItem.creditLine">Credit Line: {{artItem.creditLine}}</p>
+    </div>
+  </div>
+  <div class="row" *ngIf="artItem.city || artItem.state || artItem.country">
+    <div class="col-xs-12">
+      <h5>Location</h5>
+      <p *ngIf="artItem.city">City: {{artItem.city}}</p>
+      <p *ngIf="artItem.state">State: {{artItem.state}}</p>
+      <p *ngIf="artItem.country">Country: {{artItem.country}}</p>
+    </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>{{artItem.title}}</h1>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <a *ngIf="artItem.objectURL !== ''" [href]="artItem.objectURL" target="_blank">View on Met Museum
-      Website</a>
-  </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h4>More about this art</h4>
-    <p *ngIf="artItem.objectDate">Date: {{artItem.objectDate}}</p>
-    <p *ngIf="artItem.department">Department: {{artItem.department}}</p>
-    <p *ngIf="artItem.dimensions">Dimensions: {{artItem.dimensions}}</p>
-    <p *ngIf="artItem.creditLine">Credit Line: {{artItem.creditLine}}</p>
-  </div>
-</div>
-<div class="row" *ngIf="artItem.city || artItem.state || artItem.country">
-  <div class="col-xs-12">
-    <h5>Location</h5>
-    <p *ngIf="artItem.city">City: {{artItem.city}}</p>
-    <p *ngIf="artItem.state">State: {{artItem.state}}</p>
-    <p *ngIf="artItem.country">Country: {{artItem.country}}</p>
-  </div>
-</div>
+<ng-template #noData>
+  <p>No data...</p>
+</ng-template>
